syntax = "proto3";
package cardchain.cardchain;

import "gogoproto/gogo.proto";

option go_package = "github.com/DecentralCardGame/cardchain/x/cardchain/types";

message Encounter {
  uint64 id = 1;
  repeated uint64 drawlist = 2;
  bool proven = 3;
  string owner = 4;
  map<string, string> parameters = 5;
  uint64 imageId = 6;
  string name = 7;
}
